# vdmarl

./: .gitignore  LICENSE  README.md  pyproject.toml
notebooks/: Run experiment.ipynb  experiment.py
scripts/: plot_results.py  run-vdmarl.py
src/vdmarl/: __init__.py  eval_results.py  evaluate.py  hydra_config.py  resume.py  run.py  utils.py
src/vdmarl/algorithms/: __init__.py  avdnet.py  common.py  ensemble.py  qatten.py  qmix.py  qmix_gnn.py  qplex.py  qtran.py  transmix.py  vdn.py  wqmix.py
src/vdmarl/benchmark/: benchmark.py
src/vdmarl/conf/algorithm/: avdnet.yaml  qatten.yaml  qmix_gnn.yaml  qplex.yaml  qtran.yaml  transmix.yaml  wqmix.yaml
src/vdmarl/conf/experiment/: base_experiment.yaml
src/vdmarl/environments/: __init__.py  common.py
src/vdmarl/environments/magent/: adversarial_pursuit.py  common.py
src/vdmarl/environments/meltingpot/: common.py
src/vdmarl/environments/pettingzoo/: common.py  multiwalker.py
src/vdmarl/environments/smacv2/: common.py
src/vdmarl/environments/vmas/: ball_passage.py  ball_trajectory.py  buzz_wire.py  common.py  discovery.py  dispersion.py  dropout.py  (+15 more)
src/vdmarl/experiment/: callback.py  experiment.py  logger.py
src/vdmarl/models/: __init__.py  cnn.py  common.py  deepsets.py  gnn.py  gru.py  lstm.py  mlp.py
tests/: conftest.py  test_algorithm.py  test_avdnet.py  test_magent.py  test_meltingpot.py  test_models.py  test_pettingzoo.py  test_qatten.py  test_qmix_gnn.py  test_qplex.py  test_qtran.py  test_smacv2.py  test_task.py  test_transmix.py  test_vmas.py  test_wqmix.py  utils.py  utils_experiment.py
