[project]
name = "vdmarl"
version = "0.1.0"
description = "Value-decomposition MARL experimentation library based on BenchMARL."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "id-marl-eval>=0.0.4",
    "matplotlib>=3.10.9",
    "moviepy>=2.2.1",
    "numpy<2",
    "omegaconf>=2.3.0",
    "tensordict>=0.12.3",
    "torch>=2.12.0",
    "torch-geometric>=2.7.0",
    "torchcodec>=0.13.0",
    "torchrl>=0.12.0",
    "torchvision>=0.27.0",
    "tqdm<=4.65.0",
    "tqm>=0.2.1",
    "vmas>=1.5.2",
]

[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
]
